src/objects/Provider__c.object
<CustomObject>
    <description>Providers listed on transaction</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address for provider</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPIM_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>EPIM Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NPI</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of provider or facility</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Status__c</fullName>
        <description>Network status of provider</description>
        <label>Network Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>OON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Provider&apos;s Phone Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Provider&apos;s Phone Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>role for provider on the prior authorization</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rendering Provider/Facility</fullName>
                </value>
                <value>
                    <fullName>Ordering Provider</fullName>
                </value>
                <value>
                    <fullName>Admitting</fullName>
                    <isActive>false</isActive>
                    <label>Admitting</label>
                </value>
                <value>
                    <fullName>Attending</fullName>
                    <isActive>false</isActive>
                    <label>Attending</label>
                </value>
                <value>
                    <fullName>Facility</fullName>
                    <isActive>false</isActive>
                    <label>Facility</label>
                </value>
                <value>
                    <fullName>PCP</fullName>
                    <isActive>false</isActive>
                    <label>PCP</label>
                </value>
                <value>
                    <fullName>Requesting</fullName>
                    <isActive>false</isActive>
                    <label>Requesting</label>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                    <isActive>false</isActive>
                    <label>Servicing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the work order</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>ProvidersWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Provider</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>